# imednet_sdk_generator

./: AdministrationApi.csv  AdministrationApi.jmx  AdministrationApi.ts  Api.ts  ApiServiceBinder.ts  Cargo.toml  Coding.n4jsd  CodingsApi.jmx  CodingsApi.md  Dockerfile  FormList.n4jsd  FormsApi.n4js  IntervalsApi.csv  IntervalsApi.jmx  IntervalsApi.md  IntervalsApi.n4js  JobsApi.csv  JobsApi.jmx  JobsApi.md  Keyword.n4jsd  Metadata.n4jsd  Org.OpenAPITools.sln  Pagination.n4jsd  QueriesApi.jmx  QueriesApi.ts  QueryComment.n4jsd  QueryList.n4jsd  README.md  RecordJobStatus.n4jsd  RecordRevisionsApi.jmx  RecordRevisionsApi.md  RecordRevisionsApi.n4js  RecordsApi.jmx  RecordsApi.md  RecordsApi.ts  SiteList.n4jsd  Sort.n4jsd  StudiesApi.csv  StudiesApi.jmx  StudiesApi.md  (+61 more)
Apis/: CodingsApi.http  FormsApi.http  JobsApi.http  RecordRevisionsApi.http  StudiesApi.http  SubjectsApi.http  VisitsApi.http  http-client.template.env.json
Private/: OpenAPIAdministrationApiOperations.cpp  OpenAPICodingList.cpp  OpenAPICodingsApi.cpp  OpenAPICodingsApiOperations.cpp  OpenAPIComponentsSchemasRecordCreateRequestItem.cpp  OpenAPIForm.cpp  OpenAPIFormsApi.cpp  OpenAPIFormsApiOperations.cpp  OpenAPIHelpers.cpp  OpenAPIInlineObject2.cpp  OpenAPIInlineObject3.cpp  OpenAPIIntervalsApi.cpp  OpenAPIJob.cpp  OpenAPIJobsApiOperations.cpp  OpenAPIKeyword.cpp  OpenAPIModule.cpp  OpenAPIModule.h  OpenAPIPagination.cpp  OpenAPIQueryComment.cpp  OpenAPIQueryList.cpp  OpenAPIRecord.cpp  OpenAPIRecordJobStatus.cpp  OpenAPIRecordRevision.cpp  OpenAPIRecordRevisionsApi.cpp  OpenAPIRecordRevisionsApiOperations.cpp  OpenAPIRecordsApi.cpp  OpenAPIRecordsApiOperations.cpp  OpenAPIRole.cpp  OpenAPISitesApiOperations.cpp  OpenAPISort.cpp  OpenAPIStudiesApi.cpp  OpenAPIStudy.cpp  OpenAPISubject.cpp  OpenAPISubjectList.cpp  OpenAPISubjectsApi.cpp  OpenAPISubjectsApiOperations.cpp  OpenAPIVariablesApi.cpp  OpenAPIVariablesApiOperations.cpp  OpenAPIVisit.cpp  OpenAPIVisitsApi.cpp
Public/: OpenAPIBaseModel.h  OpenAPICoding.h  OpenAPICodingsApiOperations.h  OpenAPIComponentsSchemasIntervalFormsItem.h  OpenAPIForm.h  OpenAPIFormList.h  OpenAPIFormsApi.h  OpenAPIFormsApiOperations.h  OpenAPIInlineObject.h  OpenAPIInlineObject4.h  OpenAPIInlineObject5.h  OpenAPIIntervalList.h  OpenAPIIntervalsApiOperations.h  OpenAPIKeyword.h  OpenAPIQueriesApi.h  OpenAPIQuery.h  OpenAPIQueryComment.h  OpenAPIQueryList.h  OpenAPIRecord.h  OpenAPIRecordList.h  OpenAPIRecordRevisionList.h  OpenAPIRecordRevisionsApiOperations.h  OpenAPIRecordsApi.h  OpenAPISite.h  OpenAPISitesApi.h  OpenAPISort.h  OpenAPIStudiesApi.h  OpenAPIStudiesApiOperations.h  OpenAPIStudy.h  OpenAPISubjectList.h  OpenAPISubjectsApi.h  OpenAPIVariablesApi.h  OpenAPIVariablesApiOperations.h  OpenAPIVisit.h  OpenAPIVisitList.h  OpenAPIVisitsApi.h  OpenAPIVisitsApiOperations.h
R/: administration_api.R  api_response.R  codings_api.R  forms_api.R  jobs_api.R  record_revisions_api.R  records_api.R  variables_api.R
api/: AdministrationApi.ts  FormsApi.ts  IntervalsApi.ts  JobsApi.ts  SitesApi.ts  StudiesApi.ts  VisitsApi.ts  administration.service.ts  administrationApi.ts  api.ts  codings.service.ts  forms.service.ts  intervals.service.ts  intervalsApi.ts  jobs.service.ts  jobsApi.ts  openapi.yaml  (+10 more)
client/cpp-qt-client/client/: CMakeLists.txt  OAIAdministrationApi.cpp  OAIAdministrationApi.h  OAICoding.h  OAICodingList.cpp  OAICodingList.h  OAICodingsApi.cpp  OAIComponents_schemas_RecordCreateRequest_item.cpp  OAIEnum.h  OAIForm.cpp  OAIFormList.cpp  OAIFormList.h  OAIFormsApi.h  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIInline_object.cpp  OAIInline_object.h  OAIInline_object_1.h  OAIInline_object_3.cpp  OAIInline_object_4.cpp  OAIInline_object_5.cpp  OAIInterval.cpp  OAIIntervalsApi.h  OAIJob.cpp  OAIJob.h  OAIJobsApi.h  OAIMetadata.h  OAIObject.h  OAIQuery.h  OAIQueryComment.cpp  OAIQueryComment.h  OAIQueryList.cpp  OAIRecord.cpp  OAIRecordJobStatus.cpp  OAIRecordList.h  OAIRecordRevision.h  OAIRecordRevisionList.h  OAIRecordRevisionsApi.h  (+27 more)
(+5400 files in other folders)
